--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.CoronaUpdate">
-<uses-permission android:name="android.permission.INTERNET" />
+    package="com.example.CoronaUpdate" android:usesCleartextTraffic="true">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,14 +11,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.CoronaUpdate.MainActivity" android:theme="@style/AppTheme.NoActionBar" >
-
+        <activity android:name=".covid" android:screenOrientation="portrait"></activity>
+        <activity android:name=".name" android:screenOrientation="portrait"/>
+        <activity android:name=".country" android:screenOrientation="portrait"/>
+        <activity android:name=".World" android:screenOrientation="portrait"/>
+        <activity android:name=".menu" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
